Hide the border on the main page and doing some webp changes.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -870,6 +870,11 @@ textarea {
     background-color: var(--background-color);
   }
 
+  body.hide-bg {
+    background: none;
+    background-color: var(--background-color);
+  }
+
   .nav {
     width: 50vw;
     left: 25%;
