--- a/public/css/style.css
+++ b/public/css/style.css
@@ -848,10 +848,32 @@ textarea {
 /* ================== MEDIA QUERIES =================== */
 /* ==================================================== */
 
+/* Responsive Modal*/
+@media screen and (min-width: 360px) {
+  .modal-movie {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    gap: 0.4rem;
+    width: clamp(280px, 100px, 400px);
+    padding: 1.3rem;
+    top: 25%;
+    left: 5%;
+    background-color: var(--background-color);
+    border: 2px solid var(--text-color);
+    border-radius: 15px;
+    z-index: var(--z-tooltip)
+  }
+}
+
 /* For small devices*/
 @media screen and (min-width: 576px) {
   .carousel {
     perspective: 300px;
+  }
+
+  .modal-movie {
+    left: 20%;
   }
 }
 
@@ -859,6 +881,10 @@ textarea {
 @media screen and (min-width: 768px) {
   .carousel {
     perspective: 500px;
+  }
+
+  .modal-movie {
+    left: 30%;
   }
 }
 
@@ -897,10 +923,82 @@ textarea {
   .carousel {
     perspective: 700px;
   }
+
+  .modal-movie {
+    left: 40%;
+  }
 }
 
 /* For extra large devices */
-@media screen and (min-width: 1200px) {}
+@media screen and (min-width: 1200px) {
+
+}
 
 /* For extra extra large devices */
-@media screen and (min-width: 1400px) {}
+@media screen and (min-width: 1400px) {
+
+}
+
+/* Modal */
+
+.modal-movie .flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-movie h3 {
+  color: var(--text-color);
+  padding-bottom: 15px;
+}
+
+.btn-close2 {
+  color: var(--text-color);
+}
+
+.btn-openModalMovie {
+  cursor: pointer;
+}
+
+.btn-close {
+  position: absolute;
+  top: 5%;
+  left: 92%;
+  cursor: pointer;
+  transform: translate(10px, -20px);
+  padding: 0.5rem 0.7rem;
+  background: var(--background-color);
+  color: var(--text-color);
+  border-radius: 50%;
+  border: 2px solid var(--yellow-color);
+  transition: .7s;
+}
+
+.btn-close:hover {
+  background-color: #d9a849;
+}
+
+.btn-close p {
+  transition: .7s;
+}
+
+.btn-close:hover p {
+  color: var(--background-color);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
+  z-index: 1;
+}
+
+.hidden {
+  display: none;
+}
