--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,6 +202,8 @@ textarea {
 .header {
   position: fixed;
   width: 100%;
+  top: 0;
+  left: 0;
   min-height: 75px;
   background: url(../img/header.svg) repeat-x;
   z-index: var(--z-fixed);
@@ -210,14 +212,11 @@ textarea {
 .nav {
   position: relative;
   height: var(--header-height);
-  width: 95vw;
+  max-width: 954px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.nav__container {
-  margin-inline: auto;
+  margin-inline: .7rem;
 }
 
 .nav__logo,
@@ -225,7 +224,7 @@ textarea {
 .nav__toggle,
 .nav__actions {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   color: var(--text-color);
   cursor: pointer;
 }
@@ -233,7 +232,7 @@ textarea {
 .nav__logo {
   color: var(--text-color);
   align-items: center;
-  gap: 1rem;
+  column-gap: 1rem;
   font-family: var(--title-font);
   text-decoration: none;
 }
@@ -879,6 +878,10 @@ textarea {
 
 /* For medium devices*/
 @media screen and (min-width: 768px) {
+  .nav__menu {
+    width: 50%;
+}
+
   .carousel {
     perspective: 500px;
   }
@@ -902,8 +905,7 @@ textarea {
   }
 
   .nav {
-    width: 50vw;
-    left: 25%;
+      margin-inline: auto;
   }
 
   .nav__list {
@@ -911,7 +913,7 @@ textarea {
     flex-direction: row;
     gap: 2rem;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     justify-items: center;
   }
 
