Add some restrictions for non admin user.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -955,6 +955,10 @@ textarea {
   overflow: hidden;
 }
 
+.roleDetails__container {
+  margin-bottom: 30px;
+}
+
 /* ==================================================== */
 /* ====================== FORMS ======================= */
 /* ==================================================== */
